tweak weather + admin page redesign
